# fractalia2

./: .gitignore  CLAUDE.md  CMakeLists.txt  Changelog.md  Changelog003.md  Changelog004.md  Controls.md  INTERPOLATION_FRAMEWORK_DOCUMENTATION.md  Rendering.md  Shader.md  architecture.md  artificiallife.md  build-fast.sh  build-linux.sh  build.sh  changelog001.md  collision.md  compile-shaders.sh  debug_particle_alignment  debug_particle_alignment.cpp  hierarchy.md  keyframe.md  randomwalk.md  rendergraph.md  renderpipeline.md  soa.md  sun.md
docs/: Build.md  Controls.md  Fractalia2 Vulkan Subsystem Code Quality Report 818.txt  hierarchy.md  spatial.md  spatial_map_implementation.md  sun.md
src/: PolygonFactory.cpp  PolygonFactory.h  graphicstests.cpp  graphicstests.h  main.cpp  main_demo.cpp.backup  vulkan_renderer.cpp  vulkan_renderer.h
src/ecs/: CLAUDE.md  camera_component.h  camera_component.hpp  change_detection.hpp  collision_event_manager.cpp  collision_event_manager.h  component.h  component.hpp  constants.h  debug.hpp  ecs_architecture_overview.md  entity.h  entity.hpp  entity_buffer_manager.cpp  entity_descriptor_manager.cpp  entity_factory.h  entity_factory.hpp  gpu_entity_manager.cpp  gpu_entity_manager.h  memory_manager.h  memory_manager.hpp  migration_guide.md  movement_command_system.cpp  movement_command_system.h  profiler.hpp  render_batch.hpp  system.hpp  system_registry.hpp  system_scheduler.h  system_scheduler.hpp  world.hpp
src/ecs/components/: CLAUDE.md  camera_component.h  component.h  entity.h
src/ecs/core/: CLAUDE.md  entity_factory.h  service_locator.h  world_manager.cpp  world_manager.h
src/ecs/events/: CLAUDE.md  event_bus.h  event_listeners.h  event_types.h
src/ecs/gpu/: CLAUDE.md  buffer_base.cpp  buffer_base.h  buffer_operations_interface.h  buffer_upload_service.cpp  buffer_upload_service.h  entity_buffer_manager.cpp  entity_buffer_manager.h  entity_buffer_types.h  entity_descriptor_bindings.h  entity_descriptor_manager.cpp  entity_descriptor_manager.h  gpu_entity_manager.cpp  gpu_entity_manager.h  position_buffer_coordinator.cpp  position_buffer_coordinator.h  spatial_map_buffers.cpp  spatial_map_buffers.h  specialized_buffers.h
src/ecs/modules/: CLAUDE.md  input_module.cpp  input_module.h  module_integration_example.cpp  movement_module.cpp  movement_module.h  rendering_module.cpp  rendering_module.h
src/ecs/services/: CLAUDE.md  camera_service.cpp  camera_service.h  control_service.cpp  control_service.h  control_service_minimal.h  input_service.cpp  input_service.h  rendering_service.cpp  rendering_service.h
src/ecs/systems/: CLAUDE.md  (+27 more)
src/shaders/: CLAUDE.md  entity_buffer_indices.glsl  fragment.frag  god_rays.frag  god_rays.vert  movement.comp  movement_keyframe.comp  movement_pattern.comp  movement_random.comp  movement_random.txt  physics.comp  shadow_depth.frag  shadow_depth.vert  spatial_map_update.comp  sun_disc.frag  sun_disc.vert  sun_minimal_test.frag  sun_minimal_test.vert  sun_particles.comp  sun_particles.frag  sun_particles.vert  sun_particles_test.vert  sun_system.comp  sun_system.frag  sun_system.vert  sun_system_minimal.comp  sun_vertex_particles.vert  vertex.txt  vertex.vert  vertex_unified.vert
src/vulkan/: CLAUDE.md  command_executor.cpp  command_executor.h  command_submission_service.cpp  command_submission_service.h  compute_pipeline.cpp  compute_pipeline.h  compute_pipeline_manager.cpp  compute_pipeline_manager.h  compute_stress_tester.cpp  descriptor_layout_manager.cpp  descriptor_layout_manager.h  frame_graph.cpp  frame_graph.h  frame_graph_resource_registry.cpp  gpu_memory_monitor.cpp  gpu_synchronization_service.cpp  gpu_synchronization_service.h  gpu_timeout_detector.cpp  graphics_pipeline_manager.cpp  graphics_pipeline_manager.h  pipeline_system_manager.cpp  pipeline_system_manager.h  pipeline_system_simple.h  presentation_surface.cpp  presentation_surface.h  render_frame_director.cpp  render_frame_director.h  resource_context.cpp  resource_context.h  shader_manager.cpp  shader_manager.h  vulkan_constants.h  vulkan_context.cpp  vulkan_context.h  vulkan_function_loader.cpp  vulkan_function_loader.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_resources.cpp  (+7 more)
(+256 files in other folders)
